--- a/BoaViagem/res/values/strings.xml
+++ b/BoaViagem/res/values/strings.xml
@@ -9,4 +9,18 @@
     <string name="valor">Valor</string>
     <string name="data">Data</string>
     <string name="selecione">Selecione</string>
+    <string name="descricao">Descrição</string>
+    <string name="local">Local</string>
+    <string name="gastei">Gastei !</string>
+    <string name="categoria">Categoria</string>
+
+
+    <string-array name="categoria_gasto">
+        <item>Alimentação</item>
+        <item>Combustível</item>
+        <item>Transporte</item>
+        <item>Hospedagem</item>
+        <item>Outros</item>
+    </string-array>
+
 </resources>
